--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DBrowser for SQL</title>
+    <title>DBrowser</title>
 </head>
 
 <body>
-    <div class="constainer">
-        <div class="description">
-            <h1>Welcome to DBrowser for SQL</h1>
-            <h2>DBrowser for SQL is graphical user interface tool for MySQL. This project is designed to view
-                information
-                from a database</h2>
-        </div>
-        <div class="connection">
+    <div id="root"></div>
+    <script src="./renderer.js"></script>
+</body>
+
+</html>
+
+<!--
+    <div class="connection">
             <div class="connection_list">
                 <label for="conName">Connection name:</label>
                 <input type="text" name="conName" id="conName">
@@ -38,11 +38,7 @@
             <div class="connection_list">
                 <label for="passName">Password:</label>
                 <input type="password" name="passName" id="passName">
-                <span>The user's passord. Will be requested later if it's not set..</span>
+                <span>The user's passord. Will be requested later if it's not set.</span>
             </div>
         </div>
-    </div>
-    <script src="./renderer.js"></script>
-</body>
-
-</html>
+-->
