--- a/index.html
+++ b/index.html
@@ -3,42 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DBrowser</title>
 </head>
 
 <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="./renderer.js"></script>
 </body>
 
 </html>
-
-<!--
-    <div class="connection">
-            <div class="connection_list">
-                <label for="conName">Connection name:</label>
-                <input type="text" name="conName" id="conName">
-                <span>Type a name for the connection.</span>
-            </div>
-            <div class="connection_list">
-                <label for="hostName">Hostname:</label>
-                <input type="text" name="hostName" id="hostName">
-                <label for="portName">Port:</label>
-                <input type="text" name="portName" id="portName">
-                <span>IP adress of the server host and TCP/IP port.</span>
-            </div>
-            <div class="connection_list">
-                <label for="userName">Username:</label>
-                <input type="text" name="userName" id="userName">
-                <span>Name of the user connection.</span>
-            </div>
-            <div class="connection_list">
-                <label for="passName">Password:</label>
-                <input type="password" name="passName" id="passName">
-                <span>The user's passord. Will be requested later if it's not set.</span>
-            </div>
-        </div>
--->
